# Mothra

./: .env.ec3.example  .env.example  .gitignore  BEGINNER_GUIDE.md  CHUNKING_IMPLEMENTATION.md  CHUNKING_QUICKSTART.md  DEEP_CRAWL_GUIDE.md  DIAGNOSTIC_INSTRUCTIONS.md  EC3_API_ENHANCEMENTS.md  EC3_API_FIXES_SUMMARY.md  EC3_AUTHENTICATION_FIXES.md  EC3_AUTHENTICATION_GUIDE.md  EC3_INTEGRATION_GUIDE.md  EC3_OAUTH_FIX_SUMMARY.md  EC3_VALIDATION_SUMMARY.md  EIA_INTEGRATION_SUMMARY.md  ENV_FILE_FORMAT_FIX.md  EPD_LOADING_COMPLETE_GUIDE.md  EPD_VERIFICATION_FIELDS.md  FINAL_FIX_SUMMARY.md  FIX_INSTRUCTIONS.md  FIX_OAUTH2_LOADING.md  GROWING_THE_DATASET.md  GUI_README.md  INSTALL.md  MAC_FIX.md  MOTHRA_SUMMARY.md  OAUTH_FIX_SUMMARY.md  OAUTH_SETUP_MOTHRATEST.md  QUICKSTART.md  QUICKSTART_GUI.md  QUICK_START.md  README.md  VERIFICATION_IMPORT_SUMMARY.md  alembic.ini  check_env_raw.py  diagnose_env.py  diagnose_oauth_issue.py  docker-compose.yml  load_epds_with_oauth.py  (+16 more)
docs/: AUTOMATED_PIPELINE.md  CRITICAL_DATA_SOURCES_SUMMARY.md  DEPENDENCY_FIX.md  EC3_API_RELIABILITY_IMPROVEMENTS.md  EIA_INTEGRATION.md  EPD_VECTOR_STORE_GUIDE.md  FREE_SOURCES.md  GOVERNMENT_DATA_INGESTION_SETUP.md  GOVERNMENT_DATA_SOURCES.md  SKILL_SEEKERS_INTEGRATION.md  USER_MANUAL.html  USER_MANUAL.md
frontend/: IMPROVEMENTS.md  README.md  TEST_GUIDE.md  index.html  package-lock.json  package.json  vitest.config.js
mothra/: __init__.py  orchestrator.py
scripts/: README_EPD_LOADING.md  add_sample_data.py  bulk_import_epds.py  check_ec3_key.py  chunk_and_embed_all.py  crawl_real_carbon_data.py  database_summary.py  deep_crawl_real_datasets.py  diagnose_ec3_api.py  download_government_data.py  embed_entities.py  epd_summary_report.py  mega_crawl.py  (+31 more)
(+63 files in other folders)
